// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab Snapshots Deselected (rounded variant) 1`] = `
.c0 {
  display: inline-block;
  margin: 0 0.25em;
}

.c0:first-child {
  margin-left: 0;
}

.c0:last-child {
  margin-right: 0;
}

.c1 {
  display: block;
  box-sizing: border-box;
  min-width: 10rem;
  padding: 0.25em 1em;
  border: 1px solid #E8E8E8;
  border-radius: 2em;
  text-align: center;
  color: #B4B4B4;
  cursor: pointer;
}

.c1:hover,
.c1:active {
  background-color: #F1F1F1;
}

.c1:active,
.c1:focus {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

<li
  class="c0"
>
  <label
    aria-selected="false"
    class="c1"
    role="tab"
  >
    Foo
  </label>
</li>
`;

exports[`Tab Snapshots Deselected 1`] = `
.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-color: transparent;
  color: #F16622;
}

.c1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c1 .c3 {
  color: #F16622;
}

.c1:hover:enabled,
.c1:active:enabled {
  background-color: #F9EAE7;
}

.c1:active:enabled,
.c1:focus:enabled {
  box-shadow: 0 0 0 4px rgba(249,234,231,0.2);
}

.c0 {
  display: inline-block;
  padding: 0;
  border-bottom: none;
}

.c2 {
  padding: 1.25em;
  color: #B4B4B4;
  text-shadow: none;
}

.c2:hover:enabled {
  color: #F16622;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:active:enabled {
  color: #a33c0a;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:focus:enabled {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<li
  class="c0"
>
  <button
    aria-selected="false"
    class="c1 c2"
    role="tab"
    type="button"
  >
    <span>
      Foo
    </span>
  </button>
</li>
`;

exports[`Tab Snapshots Selected (rounded variant) 1`] = `
.c0 {
  display: inline-block;
  margin: 0 0.25em;
}

.c0:first-child {
  margin-left: 0;
}

.c0:last-child {
  margin-right: 0;
}

.c1 {
  display: block;
  box-sizing: border-box;
  min-width: 10rem;
  padding: 0.25em 1em;
  border: 1px solid #E8E8E8;
  border-radius: 2em;
  text-align: center;
  color: #B4B4B4;
  cursor: pointer;
  border: 1px solid #F16622;
  color: white;
  font-weight: bold;
  background-color: #F16622;
}

.c1:hover,
.c1:active {
  background-color: #F1F1F1;
}

.c1:active,
.c1:focus {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c1:hover,
.c1:active {
  background-color: #F16622;
}

.c1:active,
.c1:focus {
  box-shadow: 0 0 0 4px rgba(241,102,34,0.2);
}

<li
  class="c0"
  selected=""
>
  <label
    aria-selected="true"
    class="c1"
    role="tab"
    selected=""
  >
    Foo
  </label>
</li>
`;

exports[`Tab Snapshots Selected 1`] = `
.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-color: transparent;
  color: #F16622;
}

.c1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c1 .c3 {
  color: #F16622;
}

.c1:hover:enabled,
.c1:active:enabled {
  background-color: #F9EAE7;
}

.c1:active:enabled,
.c1:focus:enabled {
  box-shadow: 0 0 0 4px rgba(249,234,231,0.2);
}

.c0 {
  display: inline-block;
  padding: 0;
  border-bottom: 2px solid #F16622;
}

.c2 {
  padding: 1.25em;
  color: #F16622;
  text-shadow: -0.75px 0px 0px #F16622,-0.75px 0px 0px #F16622;
}

.c2:hover:enabled {
  color: #F16622;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:active:enabled {
  color: #a33c0a;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:focus:enabled {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<li
  class="c0"
  selected=""
>
  <button
    aria-selected="true"
    class="c1 c2"
    role="tab"
    selected=""
    type="button"
  >
    <span>
      Foo
    </span>
  </button>
</li>
`;

exports[`TabBar Snapshots No tabs 1`] = `null`;

exports[`TabBar Snapshots Non-tab children 1`] = `
.c0 {
  display: block;
  list-style: none;
  padding: 0;
}

<ul
  class="c0"
  role="tablist"
>
  Not a tab at all.
</ul>
`;

exports[`TabBar Snapshots Rounded variant 1`] = `
.c0 {
  display: block;
  list-style: none;
  padding: 0;
}

.c1 {
  display: inline-block;
  margin: 0 0.25em;
}

.c1:first-child {
  margin-left: 0;
}

.c1:last-child {
  margin-right: 0;
}

.c3 {
  display: block;
  box-sizing: border-box;
  min-width: 10rem;
  padding: 0.25em 1em;
  border: 1px solid #E8E8E8;
  border-radius: 2em;
  text-align: center;
  color: #B4B4B4;
  cursor: pointer;
}

.c3:hover,
.c3:active {
  background-color: #F1F1F1;
}

.c3:active,
.c3:focus {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c2 {
  display: block;
  box-sizing: border-box;
  min-width: 10rem;
  padding: 0.25em 1em;
  border: 1px solid #E8E8E8;
  border-radius: 2em;
  text-align: center;
  color: #B4B4B4;
  cursor: pointer;
  border: 1px solid #F16622;
  color: white;
  font-weight: bold;
  background-color: #F16622;
}

.c2:hover,
.c2:active {
  background-color: #F1F1F1;
}

.c2:active,
.c2:focus {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c2:hover,
.c2:active {
  background-color: #F16622;
}

.c2:active,
.c2:focus {
  box-shadow: 0 0 0 4px rgba(241,102,34,0.2);
}

<ul
  class="c0"
  role="tablist"
>
  <li
    class="c1"
    selected=""
  >
    <label
      aria-selected="true"
      class="c2"
      role="tab"
      selected=""
    >
      Foo
    </label>
  </li>
  <li
    class="c1"
  >
    <label
      aria-selected="false"
      class="c3"
      role="tab"
    >
      Bar
    </label>
  </li>
</ul>
`;

exports[`TabBar Snapshots Selected tabs 1`] = `
.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-color: transparent;
  color: #F16622;
}

.c2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c2 .c6 {
  color: #F16622;
}

.c2:hover:enabled,
.c2:active:enabled {
  background-color: #F9EAE7;
}

.c2:active:enabled,
.c2:focus:enabled {
  box-shadow: 0 0 0 4px rgba(249,234,231,0.2);
}

.c0 {
  display: block;
  list-style: none;
  padding: 0;
}

.c4 {
  display: inline-block;
  padding: 0;
  border-bottom: none;
}

.c1 {
  display: inline-block;
  padding: 0;
  border-bottom: 2px solid #F16622;
}

.c5 {
  padding: 1.25em;
  color: #B4B4B4;
  text-shadow: none;
}

.c5:hover:enabled {
  color: #F16622;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:active:enabled {
  color: #a33c0a;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:focus:enabled {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  padding: 1.25em;
  color: #F16622;
  text-shadow: -0.75px 0px 0px #F16622,-0.75px 0px 0px #F16622;
}

.c3:hover:enabled {
  color: #F16622;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:active:enabled {
  color: #a33c0a;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:focus:enabled {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<ul
  class="c0"
  role="tablist"
>
  <li
    class="c1"
    selected=""
  >
    <button
      aria-selected="true"
      class="c2 c3"
      role="tab"
      selected=""
      type="button"
    >
      <span>
        Foo
      </span>
    </button>
  </li>
  <li
    class="c4"
  >
    <button
      aria-selected="false"
      class="c2 c5"
      role="tab"
      type="button"
    >
      <span>
        Bar
      </span>
    </button>
  </li>
</ul>
`;

exports[`TabBar Snapshots Some tabs 1`] = `
.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-color: transparent;
  color: #F16622;
}

.c2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c2 .c4 {
  color: #F16622;
}

.c2:hover:enabled,
.c2:active:enabled {
  background-color: #F9EAE7;
}

.c2:active:enabled,
.c2:focus:enabled {
  box-shadow: 0 0 0 4px rgba(249,234,231,0.2);
}

.c0 {
  display: block;
  list-style: none;
  padding: 0;
}

.c1 {
  display: inline-block;
  padding: 0;
  border-bottom: none;
}

.c3 {
  padding: 1.25em;
  color: #B4B4B4;
  text-shadow: none;
}

.c3:hover:enabled {
  color: #F16622;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:active:enabled {
  color: #a33c0a;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:focus:enabled {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<ul
  class="c0"
  role="tablist"
>
  <li
    class="c1"
  >
    <button
      aria-selected="false"
      class="c2 c3"
      role="tab"
      type="button"
    >
      <span>
        Foo
      </span>
    </button>
  </li>
  <li
    class="c1"
  >
    <button
      aria-selected="false"
      class="c2 c3"
      role="tab"
      type="button"
    >
      <span>
        Bar
      </span>
    </button>
  </li>
</ul>
`;
